--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,11 +16,12 @@
             "externalConsole": false,
             "MIMode": "gdb",
             "miDebuggerPath": "C:\\MinGW\\bin\\gdb.exe",
+            //"internalConsoleOptions": "openOnSessionStart",
             "setupCommands": [
                 {
                     "description": "Habilitar la impresión con sangría para gdb",
                     "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
+                    "ignoreFailures": false
                 }
             ],
             "preLaunchTask": "C/C++: gcc.exe build active file"
